Bug 1210328, compute correct flip state for popups, r=ksteuber